[tool.poetry]
name = "jedha-fs-s4-project"
version = "0.1.0"
description = "Detecting fraudulent activity"
authors = ["thefifthagreement <mickael.vitry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyternotify = "^0.1.15"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
xgboost = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
